[Omnibox] fix blank space for answer image

This CL doesn't show a blank space for answers that will not have images
(for example a stock price) while still showing for those that do (such
as a weather result).

Bug: 842250
Change-Id: Ia53e28124321267cd520407fb97cbac4dded0f06
Reviewed-on: https://chromium-review.googlesource.com/1055853
Commit-Queue: Dave Schuyler <dschuyler@chromium.org>
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558582}
Former-commit-id: 935cc6fd5801d13308e3fba535059dd941c6b622